--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -8,7 +8,6 @@
 
 
 .outer-wrapper{
-    /* display: flex; */
     justify-content: center;
     /* background-color: aqua; */
     /* align-items: center; */
@@ -19,6 +18,42 @@
 }
 
 .name{
+    
     color: var(--brown);
     font-size: 8rem ;
+}
+
+.card-wrapper{
+    display: flex;
+    justify-content: center;
+
+}
+
+.about{
+    background-color: var(--redish);
+    color: var(--creme);
+    width: 20vw;
+    padding: 1rem;
+    margin: 1rem;
+  text-decoration: none;
+
+
+}
+
+.pythonP{
+    background-color: var(--aqua);
+    color: var(--creme);
+    width: 20vw;
+    padding: 1rem;
+    margin: 1rem;
+
+}
+
+.shelterP{
+    background-color: var(--redish);
+    color: var(--creme);
+    width: 20vw;
+    padding: 1rem;
+    margin: 1rem;
+ 
 }
