--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,7 @@
 }
 
 .App{
-  background-color: var(--creme);
-  height: 100vh;
+
 }
 
 
@@ -61,6 +60,10 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  background-color: var(--creme);
+  height: 100%;
+  text-align: center;
+
 }
 
 /* A elements that don't have a class get default styles */
