--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,98 +1,99 @@
 :root{
-    --darkgreen: #283D3B;
-    --aqua: #197278;
-    --creme: #EDDDD4;
-    --redish: #C44536;
-    --brown: #772E25;
-  }
+  --darkgreen: #283D3B;
+  --aqua: #197278;
+  --creme: #EDDDD4;
+  --redish: #C44536;
+  --brown: #772E25;
+}
 
 
 .outer-wrapper{
-    justify-content: center;
-    /* background-color: aqua; */
-    /* align-items: center; */
-    text-align: center;
-    /* margin-left: 80px; */
-    width: 100vw;
-    
+  justify-content: center;
+  /* background-color: aqua; */
+  /* align-items: center; */
+  text-align: center;
+  /* margin-left: 80px; */
+  width: 100vw;
+  
 }
 
 .name{
-    
-    color: var(--brown);
-    /* font-size: 8rem ; */
-    font-size:10vw
+  
+  color: var(--brown);
+  /* font-size: 8rem ; */
+  font-size:10vw
 }
 
 .card-wrapper{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap
-
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  column-gap: 50px;
 
 }
 
 @media only screen and (max-width: 800px) {
-    .card-wrapper {
-      flex-direction: column;
-      align-items: center;
-    }
+  .card-wrapper {
+    flex-direction: column;
+    align-items: center;
   }
+}
 
 .about{
-    background-color: var(--redish);
-    color: var(--creme);
-    width: 100px;
-    padding: 1rem;
-    margin: 1rem;
+  background-color: var(--redish);
+  color: var(--creme);
+  width: 150px;
+  padding: 1rem;
+  margin: 1rem;
+text-decoration: none;
+flex: 0 0 23%;
+height: 150px;
+
+
+}
+@media only screen and (max-width: 800px) {
+  .about {
+      width: 161px;
+      height: 148px;
+  }
+}
+
+.pythonP{
+  background-color: var(--aqua);
+  color: var(--creme);
+  width: 150px;
+  padding: 1rem;
+  margin: 1rem;
+  text-decoration: none;
+  height: 148px;
+  flex: 0 0 23%;
+
+
+
+
+}
+@media only screen and (max-width: 800px) {
+  .pythonP {
+      width: 161px;
+      height: 148px;
+  }
+}
+
+.shelterP{
+  background-color: var(--redish);
+  color: var(--creme);
+  width: 150px;
+  padding: 1rem;
+  margin: 1rem;
   text-decoration: none;
   flex: 0 0 23%;
   height: 150px;
 
-
-}
-@media only screen and (max-width: 800px) {
-    .about {
-        width: 161px;
-        height: 148px;
-    }
-  }
-
-.pythonP{
-    background-color: var(--aqua);
-    color: var(--creme);
-    width: 150px;
-    padding: 1rem;
-    margin: 1rem;
-    text-decoration: none;
-    height: 148px;
-    flex: 0 0 23%;
-
-
-
-}
-@media only screen and (max-width: 800px) {
-    .pythonP {
-        width: 161px;
-        height: 148px;
-    }
-  }
-
-.shelterP{
-    background-color: var(--redish);
-    color: var(--creme);
-    width: 150px;
-    padding: 1rem;
-    margin: 1rem;
-    text-decoration: none;
-    flex: 0 0 23%;
-    height: 150px;
-
 }
 
 @media only screen and (max-width: 800px) {
-    .shelterP {
-        width: 161px;
-        height: 148px;
-    }
+  .shelterP {
+      width: 161px;
+      height: 148px;
   }
+}
